// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayToast with initial state {"progressSpinnerOn":true,"progressSpinnerText":"foobar"} 1`] = `
Object {
  "progressSpinnerOn": true,
  "progressSpinnerText": "foobar",
}
`;

exports[`HideProgressSpinner with initial state {"progressSpinnerOn":true,"progressSpinnerText":"foobar"} 1`] = `
Object {
  "progressSpinnerOn": false,
  "progressSpinnerText": undefined,
}
`;

exports[`ShowProgressSpinner with initial state {"progressSpinnerOn":false,"progressSpinnerText":"foobar"} 1`] = `
Object {
  "progressSpinnerOn": true,
  "progressSpinnerText": "foobar",
}
`;

exports[`The Unknown Action with initial state {"progressSpinnerOn":false,"progressSpinnerText":"foobar"} 1`] = `
Object {
  "progressSpinnerOn": false,
  "progressSpinnerText": "foobar",
}
`;

exports[`The undefined initial state with initial state undefined 1`] = `
Object {
  "progressSpinnerOn": false,
}
`;
